--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -15,86 +15,16 @@
   limitations under the License.
 -->
 
-<!DOCTYPE web-app
+<!--<!DOCTYPE web-app
     PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-    "http://java.sun.com/dtd/web-app_2_3.dtd">
-<!--<web-app
-    xmlns="http://java.sun.com/xml/ns/javaee" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    version="3.0">-->
-<web-app>
-  <display-name>Jakes Tutorials</display-name>
+    "http://java.sun.com/dtd/web-app_2_3.dtd">-->
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <display-name>Tutorial Manager</display-name>
   <description>CS 122b extra credit project</description>
-
   <welcome-file-list>
     <welcome-file>tutorials</welcome-file>
   </welcome-file-list>
- 
-  <!-- Tutorials
-  <servlet>
-    <servlet-name>tutorials</servlet-name>
-    <servlet-class>Tutorials</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>tutorials</servlet-name>
-    <url-pattern>/tutorials</url-pattern>
-  </servlet-mapping>
-   SingleTutorial -->
-  <servlet>
-    <servlet-name>single_tutorial</servlet-name>
-    <servlet-class>SingleTutorial</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>single_tutorial</servlet-name>
-    <url-pattern>/tutorial</url-pattern>
-  </servlet-mapping>
-  <!-- _Dashboard -->
-  <servlet>
-    <servlet-name>_dashboard</servlet-name>
-    <servlet-class>_Dashboard</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>_dashboard</servlet-name>
-    <url-pattern>/_dashboard</url-pattern>
-  </servlet-mapping>
-  <!-- _DashboardSelect -->
-  <servlet>
-    <servlet-name>_dashboard_select</servlet-name>
-    <servlet-class>_DashboardSelect</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>_dashboard_select</servlet-name>
-    <url-pattern>/_dashboard_select</url-pattern>
-  </servlet-mapping>
-  <!-- _DashboardUpdate -->
-  <servlet>
-    <servlet-name>_dashboard_update</servlet-name>
-    <servlet-class>_DashboardUpdate</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>_dashboard_update</servlet-name>
-    <url-pattern>/_dashboard_update</url-pattern>
-  </servlet-mapping>
-  <!-- _DashboardUpdate -->
-  <servlet>
-    <servlet-name>_dashboard_delete</servlet-name>
-    <servlet-class>_DashboardDelete</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>_dashboard_delete</servlet-name>
-    <url-pattern>/_dashboard_delete</url-pattern>
-  </servlet-mapping>
-  <!-- Images -->
-  <servlet>
-    <servlet-name>images</servlet-name>
-    <servlet-class>Images</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>images</servlet-name>
-    <url-pattern>/images</url-pattern>
-  </servlet-mapping>
-  <!-- FileUpload -->
+  <!--
   <servlet>
     <servlet-name>upload</servlet-name>
     <jsp-file>/jsp/upload.jsp</jsp-file>
@@ -103,8 +33,5 @@
     <servlet-name>upload</servlet-name>
     <url-pattern>/upload</url-pattern>
   </servlet-mapping>
-
-
-  <!-- Define servlets that are included in the example application -->
-
+  -->
 </web-app>
